--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -17,9 +17,9 @@
    <widget class="QLineEdit" name="lineEdit">
     <property name="geometry">
      <rect>
-      <x>470</x>
-      <y>410</y>
-      <width>281</width>
+      <x>430</x>
+      <y>360</y>
+      <width>291</width>
       <height>28</height>
      </rect>
     </property>
@@ -30,8 +30,8 @@
    <widget class="QPushButton" name="goNorthButton">
     <property name="geometry">
      <rect>
-      <x>530</x>
-      <y>120</y>
+      <x>110</x>
+      <y>360</y>
       <width>161</width>
       <height>61</height>
      </rect>
@@ -43,8 +43,8 @@
    <widget class="QPushButton" name="goWestButton">
     <property name="geometry">
      <rect>
-      <x>450</x>
-      <y>200</y>
+      <x>40</x>
+      <y>430</y>
       <width>141</width>
       <height>61</height>
      </rect>
@@ -56,8 +56,8 @@
    <widget class="QPushButton" name="goEastButton">
     <property name="geometry">
      <rect>
-      <x>610</x>
-      <y>200</y>
+      <x>190</x>
+      <y>430</y>
       <width>151</width>
       <height>61</height>
      </rect>
@@ -69,8 +69,8 @@
    <widget class="QPushButton" name="goSouthButton">
     <property name="geometry">
      <rect>
-      <x>530</x>
-      <y>280</y>
+      <x>110</x>
+      <y>500</y>
       <width>151</width>
       <height>61</height>
      </rect>
@@ -84,9 +84,35 @@
      <rect>
       <x>20</x>
       <y>20</y>
-      <width>391</width>
-      <height>511</height>
+      <width>751</width>
+      <height>301</height>
      </rect>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton">
+    <property name="geometry">
+     <rect>
+      <x>430</x>
+      <y>430</y>
+      <width>141</width>
+      <height>61</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>PushButton</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton_2">
+    <property name="geometry">
+     <rect>
+      <x>590</x>
+      <y>430</y>
+      <width>141</width>
+      <height>61</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>PushButton</string>
     </property>
    </widget>
   </widget>
