--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -89,30 +89,43 @@
      </rect>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton">
+   <widget class="QPushButton" name="attackButton">
     <property name="geometry">
      <rect>
       <x>430</x>
-      <y>430</y>
+      <y>500</y>
       <width>141</width>
       <height>61</height>
      </rect>
     </property>
     <property name="text">
-     <string>PushButton</string>
+     <string>ATTACK</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_2">
+   <widget class="QPushButton" name="blockButton">
     <property name="geometry">
      <rect>
       <x>590</x>
-      <y>430</y>
+      <y>500</y>
       <width>141</width>
       <height>61</height>
      </rect>
     </property>
     <property name="text">
-     <string>PushButton</string>
+     <string>BLOCK</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="battleButton">
+    <property name="geometry">
+     <rect>
+      <x>500</x>
+      <y>420</y>
+      <width>151</width>
+      <height>61</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>BATTLE</string>
     </property>
    </widget>
   </widget>
